Added v1.1 release to main page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@ layout: default
             </p>
 
             <p>
-                <a href='https://bintray.com/rabe21/maven/openpythia/_latestVersion'>
-                    <img src='https://api.bintray.com/packages/rabe21/maven/openpythia/images/download.svg'>
-                </a>
+                <strong>
+                  <a href='https://github.com/OpenPythia/OpenPythia/releases/download/v1.1/openPythia.jar'>
+                   Download Open Pythia v1.1
+                 </a>
+              </strong>
             </p>
         </div>
     </div>
