fixed link, otherwise a double / would mislead the browser

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
                 </li>
             </ul>
 
-            <p>Download OpenPythia today and read the <a href="{{ site.baseurl }}/getting_started/">Getting started</a> section.</p>
+            <p>Download OpenPythia today and read the <a href="{{ site.baseurl }}getting_started/">Getting started</a> section.</p>
         </div>
         <div class="col-xs-7 col-md-5">
             <img src="images/GettingStarted_07_ExcelOverview.png">
